--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>dangkh0a - Badges Gallery</title>
@@ -22,7 +23,9 @@
   <meta name="twitter:title" content="dangkh0a - Gallery">
   <meta name="twitter:description" content="Bộ sưu tập hình ảnh ấn tượng, trình diễn với giao diện tối/sáng.">
   <meta name="twitter:image" content="https://yourdomain.com/logo.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
+
 <body class="bg-gray-100 text-gray-800 dark:bg-gray-900 dark:text-gray-200">
   <div class="flex h-screen">
     <aside class="w-72 bg-white dark:bg-gray-800 border-r dark:border-gray-700 overflow-y-auto">
