--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
 <body class="bg-gray-100 text-gray-800 dark:bg-gray-900 dark:text-gray-200">
   <div class="flex h-screen">
     <aside class="w-72 bg-white dark:bg-gray-800 border-r dark:border-gray-700 overflow-y-auto">
+      <div>
+        <a href="https://github.com/dangkhoa2004/badge-preview-service" class="inline-flex items-center justify-center p-5 text-base font-medium text-gray-500 rounded-lg bg-gray-50
+                  hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:bg-gray-800
+                  dark:hover:bg-gray-700 dark:hover:text-white">
+          <i class="fab fa-github w-5 h-5 me-3"></i>
+
+          <span class="w-full">Start with understanding the source code?</span>
+
+          <svg class="w-4 h-4 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+            viewBox="0 0 14 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M1 5h12m0 0L9 1m4 4L9 9" />
+          </svg>
+        </a>
+      </div>
       <div
         class="sticky top-0 flex items-center justify-between p-4 bg-white dark:bg-gray-800 border-b dark:border-gray-700 z-10">
         <h2 class="text-xl font-bold flex items-center gap-2">
