--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <div class="flex h-screen">
     <aside class="w-72 bg-white dark:bg-gray-800 border-r dark:border-gray-700 overflow-y-auto">
       <div>
-        <a href="https://github.com/dangkhoa2004/badge-preview-service" class="inline-flex items-center justify-center p-5 text-base font-medium text-gray-500 rounded-lg bg-gray-50
-                  hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:bg-gray-800
+        <a href="https://github.com/dangkhoa2004/badge-preview-service" class="inline-flex items-center justify-center p-5 text-base font-medium rounded-lg bg-gray-50
+                  hover:text-gray-900 hover:bg-gray-100 dark:text-white dark:bg-gray-800
                   dark:hover:bg-gray-700 dark:hover:text-white">
           <i class="fab fa-github w-5 h-5 me-3"></i>
           <span class="w-full">Start with understanding the source code?</span>
